# graphics-programming-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
docs/: voxel-engine-planning.md
include/sandbox/: app_context.hpp  logging.hpp  state.hpp  state_manager.hpp  state_registry.hpp
include/sandbox/assets/: image_loader.hpp
include/sandbox/graphics/: mesh_utils.hpp  primitives.hpp  shader_utils.hpp
include/sandbox/states/: fragment_playground_state.hpp  hello_cube_state.hpp  selector_menu_state.hpp  state_imgui_utils.hpp  voxel_game_state.hpp
include/sandbox/voxel/: runtime.hpp
include/sandbox/voxel/camera/: fly_camera.hpp
include/sandbox/voxel/concurrency/: lock_free_mpsc_queue.hpp  queue_mode.hpp
include/sandbox/voxel/meshing/: controller.hpp
include/sandbox/voxel/render/: material_pack.hpp  render_system.hpp
include/sandbox/voxel/streaming/: residency.hpp  terrain_generator.hpp
include/sandbox/voxel/ui/: game_overlay.hpp
include/sandbox/voxel/world/: block.hpp  chunk.hpp  chunk_coords.hpp  world.hpp
resource_packs/default/: README.md  pack.txt
shaders/: fragment_playground.frag  fragment_playground.vert  hello_cube.frag  hello_cube.vert  voxel_chunk.frag  voxel_chunk.vert  voxel_chunk_cutout.frag  voxel_chunk_opaque.frag  voxel_chunk_translucent.frag
src/: main.cpp
src/benchmarks/voxel/: benchmark_support.cpp  benchmark_support.hpp  voxel_benchmarks.cpp
src/sandbox/: logging.cpp  state_manager.cpp
src/sandbox/assets/: image_loader.cpp
src/sandbox/graphics/: mesh_utils.cpp  primitives.cpp  shader_utils.cpp
src/sandbox/states/: fragment_playground_state.cpp  hello_cube_state.cpp  selector_menu_state.cpp  voxel_game_state.cpp
src/sandbox/voxel/: runtime.cpp
src/sandbox/voxel/camera/: fly_camera.cpp
src/sandbox/voxel/meshing/: controller.cpp
src/sandbox/voxel/render/: material_pack.cpp  render_system.cpp
src/sandbox/voxel/streaming/: residency.cpp  terrain_generator.cpp
src/sandbox/voxel/ui/: game_overlay.cpp
src/sandbox/voxel/world/: world.cpp
